--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "drizzle:generate": "drizzle-kit generate",
-    "drizzle:push": "drizzle-kit push"
+    "drizzle:push": "drizzle-kit push",
+    "migrate:prod": "node scripts/migrate-prod.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
