--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "drizzle:generate": "drizzle-kit generate",
     "drizzle:push": "drizzle-kit push",
     "migrate:prod": "node scripts/migrate-prod.js",
-    "postinstall": "npm run build"
+    "postinstall": "npm run drizzle:generate"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
