--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "googleapis": "^159.0.0",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
