--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.0.1",
     "rxjs": "^7.8.1",
