--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.8",
+    "@types/amqplib": "^0.10.8",
     "@types/passport-google-oauth20": "^2.0.16",
+    "amqplib": "^0.10.9",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -44,6 +46,7 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "googleapis": "^159.0.0",
+    "ioredis": "^5.8.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
