--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postinstall": "npm run drizzle:generate"
   },
   "dependencies": {
+    "@casl/ability": "^6.7.5",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -45,7 +46,9 @@
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "express-basic-auth": "^1.2.1",
     "googleapis": "^159.0.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
@@ -60,7 +63,8 @@
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
