--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.7",
     "@nestjs/platform-socket.io": "^11.1.8",
+    "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.8",
     "@types/amqplib": "^0.10.8",
