--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.5.0",
     "@nestjs/websockets": "^11.1.8",
     "@types/amqplib": "^0.10.8",
     "@types/passport-google-oauth20": "^2.0.16",
